--- a/src/ApiCommon.csproj
+++ b/src/ApiCommon.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>WahineKai.Common.Api</RootNamespace>
     <Nullable>enable</Nullable>
+    <PackageId>WahineKai.Common.Api</PackageId>
+    <Company>Wahine Kai</Company>
+    <PackageDescription>Common helper classes related to APIs</PackageDescription>
+    <RepositoryUrl>https://github.com/wahinekai/common-api</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,17 +26,15 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+
+    <PackageReference Include="WahineKai.Common" Version="1.*" />
+    <PackageReference Include="WahineKai.MemberDatabase.Dto" Version="1.*" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Services\" />
     <Folder Include="Middleware\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj" />
-    <ProjectReference Include="..\BackendDTO\BackendDTO.csproj" />
   </ItemGroup>
 
 </Project>
