--- a/src/ApiCommon/ApiCommon.csproj
+++ b/src/ApiCommon/ApiCommon.csproj
@@ -8,6 +8,7 @@
     <Company>Wahine Kai</Company>
     <PackageDescription>Common helper classes related to APIs</PackageDescription>
     <RepositoryUrl>https://github.com/wahinekai/common-api</RepositoryUrl>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -28,7 +29,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
 
     <PackageReference Include="WahineKai.Common" Version="1.2.*" />
-    <PackageReference Include="WahineKai.MemberDatabase.Dto" Version="10.0.*" />
+    <PackageReference Include="WahineKai.MemberDatabase.Dto" Version="11.0.*" />
   </ItemGroup>
 
   <ItemGroup>
